Fix Java 9 warnings
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/batik/trunk@1802297 13f79535-47bb-0310-9956-ffa450edef68